--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^9.6.0",
     "axios": "^0.18.0",
     "querystring": "^0.2.0",
     "react": "^16.8.6",
@@ -28,5 +29,11 @@
     "babel-loader": "^8.0.6",
     "parcel-bundler": "^1.12.3",
     "sass": "^1.21.0"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
