--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html --port 3000",
+    "start": "parcel demo/index.html --port 3000",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build index.html --out-dir dist",
-    "build:no-cache": "parcel build src/index.html --no-cache --out-dir dist",
-    "build:no-minify": "parcel build src/index.html --no-minify --out-dir dist"
+    "build:no-cache": "parcel build demo/index.html --no-cache --out-dir dist",
+    "build:no-minify": "parcel build demo/index.html --no-minify --out-dir dist"
   },
   "author": "",
   "license": "MIT",
