--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "demo": "parcel demo/index.html --port 3001",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build index.html --out-dir dist",
+    "build:app": "parcel build src/app.js --out-dir demo/js",
     "build:no-cache": "parcel build src/index.html --no-cache --out-dir dist",
     "build:no-minify": "parcel build src/index.html --no-minify --out-dir dist"
   },
