--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "cupid-sdk-js",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.6",
+  "description": "javascript sdk for awoo nununi api",
+  "main": "production/cupid-sdk-latest.min.js",
   "scripts": {
     "start": "parcel src/index.html --port 3000",
     "demo": "parcel demo/index.html --port 3001",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build index.html --out-dir dist",
-    "build:app": "parcel build src/app.js --out-dir demo/js",
+    "build:app": "parcel build src/app.js --out-dir production --out-file cupid-sdk-latest.min.js --no-source-maps",
     "build:no-cache": "parcel build src/index.html --no-cache --out-dir dist",
     "build:no-minify": "parcel build src/index.html --no-minify --out-dir dist"
   },
-  "author": "",
+  "homepage": "https://awoo.org",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/awootaiwan/cupid-sdk-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/awootaiwan/cupid-sdk-js/issues"
+  },
+  "author": "awoo",
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^9.6.0",
