--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cupid-sdk-js",
+  "name": "@awootaiwan/cupid-sdk-js",
   "version": "1.0.6",
   "description": "javascript sdk for awoo nununi api",
   "main": "production/cupid-sdk-latest.min.js",
