--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "parcel src/index.html --port 3000",
     "demo": "parcel demo/index.html --port 3001",
+    "demo:productTag": "parcel demo/indexProductTag.html --port 3002",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build index.html --out-dir dist",
     "build:app": "parcel build src/app.js --out-dir production --out-file cupid-sdk-latest.min.js --no-source-maps",
