--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "querystring": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-paginate": "^6.3.2",
     "react-router-dom": "^5.0.0",
     "styled-components": "^4.3.2"
   },
