--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "parcel-bundler": "^1.12.3",
+    "react-document-meta": "^3.0.0-beta.2",
     "sass": "^1.22.10"
   }
 }
