--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "javascript sdk for awoo nununi api",
   "main": "production/nununi-sdk-latest.min.js",
   "scripts": {
-    "start": "parcel src/index.html --port 80",
+    "start": "parcel src/index.html --port 80  --open",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:app": "parcel build src/app.js --out-dir production --out-file nununi-sdk-latest.min.js --no-source-maps",
-    "demo:style": "parcel build demo/css/header.scss --no-source-maps --out-dir demo/css"
+    "start:demo": "parcel demo/index.html --port 1111 --open",
+    "watch": "parcel watch src/index.html",
+    "watch:app": "parcel watch src/app.js",
+    "watch:co": "parcel watch src/components/relatedProduct/relatedProduct.js",
+    "demo:style": "parcel build demo/css/header.scss --no-source-maps --out-dir demo/css",
+    "build:app": "parcel build src/app.js --out-dir production --out-file nununi-sdk-latest.min.js --no-source-maps"
   },
   "homepage": "https://awoo.org",
   "repository": {
@@ -30,6 +34,7 @@
     "react-i18next": "^11.3.1",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.0.0",
+    "react-touch-carousel": "^0.9.4",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
