--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start:demo": "parcel demo/index.html --port 1111 --open",
     "watch": "parcel watch src/index.html",
     "watch:app": "parcel watch src/app.js",
-    "watch:co": "parcel watch src/components/relatedProduct/relatedProduct.js",
-    "demo:style": "parcel build demo/css/header.scss --no-source-maps --out-dir demo/css",
+    "demo:style": "parcel watch demo/css/header.scss --no-source-maps --out-dir demo/css",
     "build:app": "parcel build src/app.js --out-dir production --out-file nununi-sdk-latest.min.js --no-source-maps"
   },
   "homepage": "https://awoo.org",
@@ -31,10 +30,10 @@
     "querystring": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-elastic-carousel": "^0.4.1",
     "react-i18next": "^11.3.1",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.0.0",
-    "react-touch-carousel": "^0.9.4",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
