--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "javascript sdk for awoo nununi api",
   "main": "production/nununi-sdk-latest.min.js",
   "scripts": {
-    "start": "parcel src/index.html --port 80  --open",
+    "start": "parcel src/index.html --port 80",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:demo": "parcel demo/index.html --port 1111 --open",
     "watch": "parcel watch src/index.html",
