--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-elastic-carousel": "^0.4.1",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.3.1",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.0.0",
@@ -45,7 +46,6 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "parcel-bundler": "^1.12.3",
-    "react-document-meta": "^3.0.0-beta.2",
     "sass": "^1.22.10"
   }
 }
